2004-01-21  Olivier Samyn  <osamyn@easynet.be>

	* docs/C/python.html: synced docs with code
	* docs/C/python.xml: synced docs with code
	* src/boards/py-mod-gcompris.c: (py_gcompris_bar_set_repeat_icon),
	(py_gcompris_get_user_default_locale),
	(py_gcompris_log_set_reason), (py_gcompris_log_end): wrapped some
new functions
	* src/boards/py-mod-utils.c: (py_gcompris_item_rotate_relative),
	(py_gcompris_item_rotate_relative_with_center),
	(py_gcompris_load_pixmap_asset), (py_gcompris_get_asset_file):
wrapped some new functions

2004-01-20  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/Makefile.in.in: no idea why it as changed
	* src/boards/reading.c: (player_win), (player_loose): added call to log for failed comment
	* src/gcompris/Makefile.am: added log.c
	* src/gcompris/board.c: (board_play), (board_stop): added log API call
	* src/gcompris/bonus.c: (bonus_image): added log API call
	* src/gcompris/gcompris.h: added log API
	* src/gcompris/log.c: created the log API

2004-01-19  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/missing_letter.c: now hide the bar just after the ok
	* src/boards/colors.c: now hide the bar just after the ok
	* src/boards/read_colors.c: now hide the bar just after the ok
	* src/boards/advanced_colors.c: now hide the bar just after the ok
	* src/boards/leftright.c: now hide the bar just after the ok
	* src/boards/enumerate.c: (process_ok): give proper negative feedback
	* src/boards/maze.c: (maze_create_item): do not display help message in 2D
	* src/boards/reading.c: (reading_next_level),
	(reading_destroy_all_items), (player_win), (player_loose): fixed start sequence
	* src/boards/target.c: (process_ok): give proper negative feedback

2004-01-19  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/boardicons/melody.png: new better icon by jose
	* boards/sounds/en/colors/gcompris_colors_en.assetml.in: fixed the location of orange.ogg
	* boards/sounds/en/colors/orange.ogg: added here: fixed the location of this file